--- a/.env
+++ b/.env
@@ -4,3 +4,6 @@ DATABASE_URL="postgresql://postgres:admin@localhost:5432/ccf_db"
 # NextAuth
 NEXTAUTH_SECRET="gerar-secret-seguro-aqui-32-caracteres-minimo-xyz123456789"
 NEXTAUTH_URL="http://localhost:3000"
+
+# File Storage
+UPLOAD_DIR="./uploads/documentos"
