--- a/.env
+++ b/.env
@@ -5,5 +5,8 @@ DATABASE_URL="postgresql://postgres:admin@localhost:5432/ccf_db"
 NEXTAUTH_SECRET="gerar-secret-seguro-aqui-32-caracteres-minimo-xyz123456789"
 NEXTAUTH_URL="http://localhost:3000"
 
+# Environment
+NODE_ENV="development"
+
 # File Storage
 UPLOAD_DIR="./uploads/documentos"
