[feat]: added administration's session

--- a/.env
+++ b/.env
@@ -1,12 +1,15 @@
 # Database
-DATABASE_URL="postgresql://postgres:admin@localhost:5432/ccf_db"
+# DATABASE_URL="postgresql://postgres:admin@localhost:5432/ccf_db"
+DATABASE_URL="postgresql://postgres:admin@10.20.5.196:5432/ccf_db"
 
 # NextAuth
-NEXTAUTH_SECRET="gerar-secret-seguro-aqui-32-caracteres-minimo-xyz123456789"
-NEXTAUTH_URL="http://localhost:3000"
+NEXTAUTH_SECRET="T2wWjLftyvzXebYINzEA0PrMaJXlxK"
+# NEXTAUTH_URL="http://localhost:3000"
+NEXTAUTH_URL="http://10.20.4.79:3000"
 
 # Environment
-NODE_ENV="development"
+# NODE_ENV="development"
+NODE_ENV="production"
 
 # File Storage
 UPLOAD_DIR="./uploads/documentos"
