--- a/.env
+++ b/.env
@@ -1,11 +1,11 @@
 # Database
-# DATABASE_URL="postgresql://postgres:admin@localhost:5432/ccf_db"
-DATABASE_URL="postgresql://postgres:admin@10.20.5.196:5432/ccf_db"
+DATABASE_URL="postgresql://postgres:admin@localhost:5432/ccf_db"
+# DATABASE_URL="postgresql://postgres:admin@10.20.5.196:5432/ccf_db"
 
 # NextAuth
 NEXTAUTH_SECRET="T2wWjLftyvzXebYINzEA0PrMaJXlxK"
-# NEXTAUTH_URL="http://localhost:3000"
-NEXTAUTH_URL="http://10.20.4.79:3000"
+NEXTAUTH_URL="http://localhost:3000"
+# NEXTAUTH_URL="http://10.20.4.79:3000"
 
 # Environment
 # NODE_ENV="development"
