[fix]: fixed all warnings and errors

--- a/.env
+++ b/.env
@@ -7,6 +7,9 @@ NEXTAUTH_SECRET="T2wWjLftyvzXebYINzEA0PrMaJXlxK"
 NEXTAUTH_URL="http://localhost:3000"
 # NEXTAUTH_URL="http://10.20.4.79:3000"
 
+# Arquivos CCF (compatibilidade com projeto anterior)
+CCF_FILES="S:\\JURFIS\\Programa\\CCF\\Arquivos"
+
 # Environment
 # NODE_ENV="development"
 NODE_ENV="production"
