--- a/package.json
+++ b/package.json
@@ -39,16 +39,19 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "dayjs": "^1.11.18",
+    "docxtemplater": "^3.67.1",
     "lucide-react": "^0.543.0",
     "next": "15.5.3",
     "next-auth": "^4.24.11",
     "next-themes": "^0.4.6",
     "pg": "^8.16.3",
+    "pizzip": "^3.2.0",
     "prisma": "^6.16.0",
     "react": "19.1.0",
     "react-day-picker": "^9.9.0",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.62.0",
+    "react-icons": "^5.5.0",
     "recharts": "^3.2.0",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
